--- a/DNNModule1test/DNNModule1test.csproj
+++ b/DNNModule1test/DNNModule1test.csproj
@@ -99,6 +99,7 @@
     <Content Include="Documentation\Documentation.css" />
     <Content Include="Documentation\Documentation.html" />
     <Content Include="Edit.ascx" />
+    <Content Include="full test only.txt" />
     <Content Include="License.txt" />
     <Content Include="module.css" />
     <Content Include="ReleaseNotes.txt" />
